fix: too much padding for smaller viewport

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     background: #0d101a;
     min-height: 100vh;
     margin: 0;
-    padding: 0 27vw;
+    padding: 0 15px;
 }
 
 .background-image {
